--- a/index.html
+++ b/index.html
@@ -27,11 +27,11 @@
     </section>
 
     <section class="programs">
-        <div class="container-fluid program-content text-center">
+        <div class="program-content">
             <h3 class="heading">BY ZURI Team</h3>
             <p class="slogan">We cater for every level of <br> expertise and needs in the industry.</p>
 
-            <div class="container-fluid my-container">
+            <div class="my-container">
                 <div class="row">
                     <div class="col">
                         <div class="program-card">
