--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <footer class="foot">
         <div class="footer-flex-container">
             <div class="flex-1">
-                <img alt="" class="footer-logo" src="./ZURI _ Learn, Build, Gro_files/zuri-logo-full.svg">
+                <img alt="" class="footer-logo" src="zuri-logo-full.svg">
             </div>
 
       
@@ -101,19 +101,19 @@
             <div class="flex-4">
                 <h3>Follow Us</h3>
                 <div class="contact-icons">
-                    <a target="_blank" href="https://web.facebook.com/thezuriteam"> <img alt="" src="./ZURI _ Learn, Build, Gro_files/fb.png"> </a>
-                    <a target="_blank" href="https://twitter.com/theZuriTeam"> <img alt="" src="./ZURI _ Learn, Build, Gro_files/twitter.png"> </a>
-                    <a target="_blank" href="https://www.instagram.com/thezuriteam/"> <img alt="" src="./ZURI _ Learn, Build, Gro_files/IG.png"> </a>
-                    <a href="https://zuri.team/#"> <img alt="" src="./ZURI _ Learn, Build, Gro_files/in.png"> </a>
+                    <a target="_blank" href="https://web.facebook.com/thezuriteam"> <img alt="facebook" src="fb.png"> </a>
+                    <a target="_blank" href="https://twitter.com/theZuriTeam"> <img alt="twitter" src="twitter.png"> </a>
+                    <a target="_blank" href="https://www.instagram.com/thezuriteam/"> <img alt="instagram" class="ig" src="IG.png"> </a>
+                    <a href="#"> <img alt="linkedin" src="in.png"> </a>
                 </div>
             </div>
         </div>
 
         <div>
-            <hr class="m-3 md-0">
+            <hr class="m">
         </div>
 
-        <div class="mx-auto text-center copyright">
+        <div class="copyright">
             <p> © 2020 ZURI TEAM </p>
         </div>
 
